# dalitz-studies

./: .gitignore  CMakeLists.txt  README.md  SConscript  SConstruct  Snakefile  btokpikpi_CovGen_norm.cpp  btokpikpi_CovGen_sig.cpp  config.yaml  environment.yml  get_hmax_Bs.cpp  install_qft.sh
framework/: AmpBase.h  AmpSS.h  AmpVS.h  AmpVV.h  BarrierFactors.h  Blinder.h  CPUtil.h  Constant.h  DalitzUtil.h  Data.h  Event.h  FitParameters.h  FitUtil.h  Func.h  GenUtil.h  LineShape.h  MassModels.h  Meson.h  Minimal4Vector.h  MinuitFcn.h  NbodyUtil.h  Par.h  PropUtil.h  Propagator.h  Selection.h  SigPDF.h  TopoVS.h  TopoVV.h  qftUtil.h
framework/amplitude/: AmpBase.h
par/: standard.json
python/: plot_dynamics_in_5D.py  plot_fit_in_5D.py  plot_likelihood_scan.py
snakefiles/: fit_signal.snake  functions.snake  generate_signal.snake  integration_events.snake  plot_signal.snake  scan_signal.snake
src/: SConscript  btokpikpi_CovFit.cpp  btokpikpi_CovGen_norm.cpp  btokpikpi_CovGen_sig.cpp  btokpikpi_CovPlot.cpp  btokpikpi_CovScan.cpp  dtokpikpi_CovFit.cpp  dtokpikpi_CovGen_norm.cpp  dtokpikpi_CovGen_sig.cpp  dtokpikpi_CovPlot.cpp  dtokpikpi_CovScan.cpp  get_hmax.cpp  get_hmax_Bs.cpp  get_hmax_Du.cpp  xtokpikpi_CovFit.cpp  xtokpikpi_CovGen_norm.cpp  xtokpikpi_CovGen_sig.cpp  xtokpikpi_CovPlot.cpp  xtokpikpi_CovScan.cpp  xtokpikpi_PlotDynamics.cpp
src/plot/: xtokpikpi_CovPlot.cpp  xtokpikpi_PlotDynamics.cpp
test/: blinding.json  test_blinding.cpp  test_blinding_algorithm.cpp  test_blinding_from_file.cpp  test_blinding_from_string.cpp
